# asimov.rs

./: .gitattributes  .gitignore  AUTHORS  CHANGES.md  CITATION.cff  Cargo.toml  Makefile  README.md  Rakefile  VERSION
lib/asimov-cache/: Cargo.toml  README.md
lib/asimov-cloud/: Cargo.toml  README.md
lib/asimov-cloud/src/: account.rs  error.rs  lib.rs
lib/asimov-core/: Cargo.toml  README.md
lib/asimov-core/src/: env.rs  error.rs  lib.rs  module_name.rs
lib/asimov-core/src/block/: definition.rs
lib/asimov-core/src/flow/: definition.rs  execution_state.rs
lib/asimov-core/src/model/: manifest.rs
lib/asimov-core/src/module/: registration.rs
lib/asimov-credit/: Cargo.toml  README.md
lib/asimov-credit/src/: credits.rs  error.rs  lib.rs
lib/asimov-directory/: Cargo.toml  README.md  examples.md.j2
lib/asimov-directory/examples/: list_configs.rs  list_modules.rs  list_programs.rs  print_paths.rs  show_config.rs
lib/asimov-directory/src/: lib.rs  module_directory.rs  module_iterators.rs  program_directory.rs  state_directory.rs
lib/asimov-directory/src/fs/: config_directory.rs  config_profile.rs  handle_resolver.rs  mod.rs  module_directory.rs  module_iterators.rs  program_directory.rs  state_directory.rs
lib/asimov-env/: Cargo.toml  README.md
lib/asimov-env/src/: env.rs  envs.rs  lib.rs  paths.rs  tools.rs
lib/asimov-env/src/envs/: cargo.rs  python.rs  ruby.rs
lib/asimov-env/src/tools/: cargo.rs  python.rs  ruby.rs
lib/asimov-flow/: Cargo.toml  README.md
lib/asimov-flow/src/: lib.rs  yaml.rs
lib/asimov-huggingface/: Cargo.toml  README.md
lib/asimov-huggingface/examples/: download.rs
lib/asimov-huggingface/src/: ensure.rs  lib.rs  progress.rs
lib/asimov-huggingface/tests/: ensure_download.rs  ensure_progress.rs
lib/asimov-id/: Cargo.toml  README.md
lib/asimov-id/src/: handle.rs  handle_error.rs  id.rs  id_error.rs  key.rs  key_error.rs  lib.rs  public_key.rs  public_key_encoding.rs  public_key_format.rs
lib/asimov-installer/: Cargo.toml  README.md
lib/asimov-installer/src/: installer.rs  lib.rs  models.rs  registry.rs
lib/asimov-installer/src/installer/: error.rs  github.rs  platform.rs
lib/asimov-kb/: Cargo.toml  README.md
lib/asimov-kb/src/: blob_id.rs  event_id.rs  id.rs  id_class.rs  id_error.rs  lib.rs  organization_id.rs  person_id.rs
lib/asimov-ledger/: Cargo.toml  README.md
lib/asimov-ledger/src/: lib.rs
lib/asimov-ledger/src/contracts/: erc20.rs
lib/asimov-module/: Cargo.toml  README.md
lib/asimov-module-kit/: Cargo.toml  README.md  examples.md.j2
lib/asimov-module-kit/src/: lib.rs  module.rs
lib/asimov-module-kit/src/module/: cargo_toml.rs  lint.rs  manifest_edit.rs  program.rs
lib/asimov-module/examples/: config.rs  decode_manifest.rs  resolver.rs
lib/asimov-module/src/: installer.rs  json.rs  lib.rs  models.rs  normalization.rs  resolve.rs  tracing.rs  url.rs
lib/asimov-module/src/installer/: error.rs  github.rs  platform.rs
lib/asimov-module/src/models/: installed_module_manifest.rs  manifest.rs  mod.rs  module_manifest.rs
lib/asimov-module/src/resolve/: error.rs
lib/asimov-nexus/: Cargo.toml  README.md
lib/asimov-nexus/src/: lib.rs  search_request.rs  search_response.rs  search_result.rs
lib/asimov-patterns/: Cargo.toml  README.md
lib/asimov-patterns/src/: adapter.rs  execute.rs  fetcher.rs  importer.rs  lib.rs  program.rs  programs.rs  provider.rs  reader.rs  reasoner.rs  registrar.rs  writer.rs
lib/asimov-patterns/src/execute/: adapter.rs  fetcher.rs  importer.rs  provider.rs  reasoner.rs
lib/asimov-patterns/src/program/: adapter.rs  cataloger.rs  emitter.rs  prompter.rs  resolver.rs
lib/asimov-patterns/src/programs/: adapter.rs  cataloger.rs  emitter.rs  fetcher.rs  indexer.rs  prompter.rs  reader.rs  reasoner.rs  resolver.rs  runner.rs  writer.rs
lib/asimov-prompt/: Cargo.toml  README.md
lib/asimov-prompt/src/: lib.rs  prompt.rs  prompt_message.rs  prompt_role.rs
lib/asimov-protocol/: Cargo.toml  README.md
lib/asimov-protocol/src/: errors.rs  gossip_protocol.rs  handle_resolver.rs  handle_resolvers.rs  lib.rs  message.rs  message_header.rs  message_recv.rs  message_send.rs  node.rs  node_state.rs  peer_accept.rs  peer_accept_state.rs  peer_connect.rs  peer_connect_state.rs  peer_connection.rs  peer_connection_state.rs  peer_feature_set.rs  peer_hello.rs  peer_id.rs  peer_protocol.rs  ping_protocol.rs  presets.rs  resolve_handle.rs  topic.rs  topic_subscription.rs
lib/asimov-protocol/src/gossip/: protocol.rs
lib/asimov-protocol/src/handle_resolvers/: csv_handle_resolver.rs
lib/asimov-protocol/src/node/: feature_set.rs  hello.rs  metrics.rs  mod.rs  (+4 more)
lib/asimov-proxy/: Cargo.toml  README.md
lib/asimov-proxy/src/: lib.rs
lib/asimov-registry/: Cargo.toml  README.md
lib/asimov-registry/src/: lib.rs  registry.rs
lib/asimov-registry/tests/: registry.rs
lib/asimov-runner/: Cargo.toml  README.md
lib/asimov-runner/src/: adapter.rs  emitter.rs  executor.rs  executor_error.rs  fetcher.rs  importer.rs  input.rs  lib.rs  output.rs  pipeline.rs  programs.rs  prompter.rs  provider.rs  reader.rs  reasoner.rs  registrar.rs  resolver.rs  runner.rs  writer.rs
lib/asimov-runner/tests/: pipeline.rs
lib/asimov-sdk/: Cargo.toml  README.md  examples.md.j2
lib/asimov-sdk/src/: block.rs  block_execution.rs  block_iter.rs  block_usage.rs  error.rs  feature.rs  flow.rs  flow_iter.rs  initialization.rs  instance.rs  lib.rs  model.rs  model_iter.rs  module.rs  module_iter.rs  prelude.rs  traits.rs
lib/asimov-server/: Cargo.toml  README.md
lib/asimov-server/app/: 404.html  index.html
lib/asimov-server/etc/: dnt-policy.txt  security.txt
lib/asimov-server/examples/: mdns-client.rs  mdns-server.rs  persistence.rs
lib/asimov-server/src/: http.rs  lib.rs  mdns.rs  persistence.rs
lib/asimov-server/tests/: mcp.rs
lib/asimov-snapshot/: Cargo.toml  README.md
lib/asimov-snapshot/src/: lib.rs  snapshot.rs  storage.rs
lib/asimov-sys/: Cargo.toml
lib/asimov-sys/src/: bindgen.rs  consts.rs  default.rs  display.rs  from.rs  getters.rs  lib.rs  try_from.rs  util.rs
(+92 files in other folders)
