# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["lib/*"]
default-members = [
    "lib/asimov-env",
    "lib/asimov-module",
    "lib/asimov-patterns",
    "lib/asimov-prompt",
    "lib/asimov-runner",
    "lib/asimov-server",
    "lib/asimov-snapshot",
]
resolver = "2"

[workspace.package]
version = "25.0.0-dev.14"
authors = ["ASIMOV Systems <support@asimov.systems>"]
edition = "2024"
rust-version = "1.85"
description = "ASIMOV Software Development Kit (SDK) for Rust"
#documentation = "https://docs.rs/asimov-sdk/"
readme = true
homepage = "https://sdk.asimov.sh"
repository = "https://github.com/asimov-platform/asimov.rs"
license = "Unlicense"
keywords = ["asimov", "ai", "sdk"]
categories = []
publish = true

[workspace.dependencies]
asimov-account = "25.0.0-dev.14"
asimov-agent = "25.0.0-dev.14"
asimov-cache = "25.0.0-dev.14"
asimov-config = "25.0.0-dev.14"
asimov-construct = "25.0.0-dev.14"
asimov-core = "25.0.0-dev.14"
asimov-dataset = "25.0.0-dev.14"
asimov-directory = "25.0.0-dev.14"
asimov-env = "25.0.0-dev.14"
asimov-flow = "25.0.0-dev.14"
asimov-graph = "25.0.0-dev.14"
asimov-ledger = "25.0.0-dev.14"
asimov-module = "25.0.0-dev.14"
asimov-ontology = "25.0.0-dev.14"
asimov-patterns = "25.0.0-dev.14"
asimov-platform = "25.0.0-dev.14"
asimov-prompt = "25.0.0-dev.14"
asimov-protocol = "25.0.0-dev.14"
asimov-proxy = "25.0.0-dev.14"
asimov-repository = "25.0.0-dev.14"
asimov-runner = "25.0.0-dev.14"
asimov-runtime = "25.0.0-dev.14"
asimov-sdk = "25.0.0-dev.14"
asimov-server = "25.0.0-dev.14"
asimov-sys = "25.0.0-dev.14"
asimov-token = "25.0.0-dev.14"
asimov-universe = "25.0.0-dev.14"
asimov-vault = "25.0.0-dev.14"
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
axum-prometheus = { version = "0.8" }
bs58 = "0.5"
bytes = "1.10"
cfg_aliases = "0.2"
clientele = { version = "0.3.8", default-features = false }
derive_more = { version = "2", default-features = false }
dogma = { version = "0.1.10", default-features = false, features = ["traits"] }
futures = "0.3"
getenv = { version = "0.1.2", default-features = false, features = [
    "cargo",
    "posix",
    "python",
    "ruby",
    "windows",
] }
gofer = { version = "0.1.8", default-features = false, features = [
    "all",
    "miette",
] }
http = "1.3"
http-body-util = "0.1"
jiff = { version = "0.2", default-features = false }
know = { version = "0", default-features = true }
openai = { package = "known-types-openai", version = "0.0.8", default-features = false, features = [
    "alloc",
] }
rmcp = { version = "0.1.5", default-features = false }
#rmcp = { version = "0.2.1", default-features = false } # FIXME
miette = { version = "7.6", default-features = false, features = ["derive"] }
protoflow = { version = "=0.4.3", default-features = false, features = [
    "blocks",
    "derive",
    "sysml",
] }
protoflow-blocks = { version = "=0.4.3", default-features = false, features = [
    "hash",
] }
protoflow-core = { version = "=0.4.3", default-features = false }
rdf-model = { version = "0.2.2", default-features = false }
rust-embed = { version = "8.7", default-features = false, features = [
    "deterministic-timestamps",
] }
secrecy = { version = "0.10", default-features = false }
stability = "0.2" # TODO: use instability
thiserror = "2"
tokio = { version = "1", default-features = false, features = [
    "io-util",
    "rt",
] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", default-features = false }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "alloc",
    "tracing-log",
] }
typed-builder = "0.21"
uuid = { version = "1.17", features = ["v4"] }

[patch.crates-io]
asimov-account = { path = "lib/asimov-account" }
asimov-agent = { path = "lib/asimov-agent" }
asimov-cache = { path = "lib/asimov-cache" }
asimov-config = { path = "lib/asimov-config" }
asimov-construct = { path = "lib/asimov-construct" }
asimov-core = { path = "lib/asimov-core" }
asimov-dataset = { path = "lib/asimov-dataset" }
asimov-directory = { path = "lib/asimov-directory" }
asimov-env = { path = "lib/asimov-env" }
asimov-flow = { path = "lib/asimov-flow" }
asimov-graph = { path = "lib/asimov-graph" }
asimov-ledger = { path = "lib/asimov-ledger" }
asimov-module = { path = "lib/asimov-module" }
asimov-ontology = { path = "lib/asimov-ontology" }
asimov-patterns = { path = "lib/asimov-patterns" }
asimov-platform = { path = "lib/asimov-platform" }
asimov-prompt = { path = "lib/asimov-prompt" }
asimov-protocol = { path = "lib/asimov-protocol" }
asimov-proxy = { path = "lib/asimov-proxy" }
asimov-repository = { path = "lib/asimov-repository" }
asimov-runner = { path = "lib/asimov-runner" }
asimov-runtime = { path = "lib/asimov-runtime" }
asimov-sdk = { path = "lib/asimov-sdk" }
asimov-server = { path = "lib/asimov-server" }
asimov-sys = { path = "lib/asimov-sys" }
asimov-token = { path = "lib/asimov-token" }
asimov-universe = { path = "lib/asimov-universe" }
asimov-vault = { path = "lib/asimov-vault" }
#protoflow = { path = "../../vnd/protoflow/lib/protoflow" }
#protoflow-blocks = { path = "../../vnd/protoflow/lib/protoflow-blocks" }
#protoflow-core = { path = "../../vnd/protoflow/lib/protoflow-core" }
#protoflow-derive = { path = "../../vnd/protoflow/lib/protoflow-derive" }
