# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["lib/*"]
default-members = [
    "lib/asimov-env",
    "lib/asimov-installer",
    "lib/asimov-module",
    "lib/asimov-patterns",
    "lib/asimov-prompt",
    "lib/asimov-registry",
    "lib/asimov-runner",
    "lib/asimov-server",
    "lib/asimov-snapshot",
]
resolver = "2"

[workspace.package]
version = "25.0.0-dev.22"
authors = ["ASIMOV Systems <support@asimov.systems>"]
edition = "2024"
rust-version = "1.85"
description = "ASIMOV Software Development Kit (SDK) for Rust"
#documentation = "https://docs.rs/asimov-sdk/"
readme = true
homepage = "https://sdk.asimov.sh"
repository = "https://github.com/asimov-platform/asimov.rs"
license = "Unlicense"
keywords = ["asimov", "ai", "sdk"]
categories = []
publish = true

[workspace.dependencies]
asimov-account = "25.0.0-dev.22"
asimov-agent = "25.0.0-dev.22"
asimov-cache = "25.0.0-dev.22"
asimov-config = "25.0.0-dev.22"
asimov-construct = "25.0.0-dev.22"
asimov-core = "25.0.0-dev.22"
asimov-dataset = "25.0.0-dev.22"
asimov-directory = "25.0.0-dev.22"
asimov-env = "25.0.0-dev.22"
asimov-flow = "25.0.0-dev.22"
asimov-graph = "25.0.0-dev.22"
asimov-installer = "25.0.0-dev.22"
asimov-ledger = "25.0.0-dev.22"
asimov-module = "25.0.0-dev.22"
asimov-ontology = "25.0.0-dev.22"
asimov-patterns = "25.0.0-dev.22"
asimov-platform = "25.0.0-dev.22"
asimov-prompt = "25.0.0-dev.22"
asimov-protocol = "25.0.0-dev.22"
asimov-proxy = "25.0.0-dev.22"
asimov-registry = "25.0.0-dev.22"
asimov-repository = "25.0.0-dev.22"
asimov-runner = "25.0.0-dev.22"
asimov-runtime = "25.0.0-dev.22"
asimov-sdk = "25.0.0-dev.22"
asimov-server = "25.0.0-dev.22"
asimov-snapshot = "25.0.0-dev.22"
asimov-sys = "25.0.0-dev.22"
asimov-token = "25.0.0-dev.22"
asimov-universe = "25.0.0-dev.22"
asimov-vault = "25.0.0-dev.22"

alloy = { version = "0.5", default-features = false }
async-stream = { version = "0.3", default-features = false }
async-trait = { version = "0.1", default-features = false }
axum = { version = "0.8", default-features = false, features = ["macros"] }
axum-embed = { version = "0.1", default-features = false }
axum-prometheus = { version = "0.8", default-features = false, features = [
	"prometheus",
] }
axum-test = { version = "17.3", default-features = false }
bon = { version = "3.6", default-features = false }
bs58 = { version = "0.5", default-features = false }
bytes = { version = "1.10", default-features = false }
cap-directories = { version = "3.4", default-features = false }
cap-std = { version = "3.4", default-features = false, features = ["fs_utf8"] }
cfg_aliases = { version = "0.2", default-features = false }
clientele = { version = "0.3.8", default-features = false, features = [
    "argfile",
    "dotenv",
    "wild",
] }
derive_more = { version = "2", default-features = false }
dogma = { version = "0.1.10", default-features = false, features = ["traits"] }
flate2 = { version = "1", default-features = false }
futures = { version = "0.3", default-features = false }
getenv = { version = "0.1.2", default-features = false, features = [
    "cargo",
    "posix",
    "python",
    "ruby",
    "windows",
] }
gofer = { version = "0.1.8", default-features = false, features = [
    "all",
    "miette",
] }
hex = { version = "0.4", default-features = false }
http = { version = "1.3", default-features = false }
http-body-util = { version = "0.1", default-features = false }
jiff = { version = "0.2", default-features = false }
know = { version = "0", default-features = true }
lazy_static = { version = "1.5", default-features = false }
libloading = { version = "0.8", default-features = false }
local-ip-address = { version = "0.6", default-features = false }
mdns-sd = { version = "0.13", default-features = false }
miette = { version = "7.6", default-features = false, features = ["derive"] }
num-derive = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }
openai = { package = "known-types-openai", version = "0.0.8", default-features = false, features = [
    "alloc",
] }
rmcp = { version = "0.1.5", default-features = false }
#rmcp = { version = "0.2.1", default-features = false } # FIXME
protoflow = { version = "=0.4.3", default-features = false, features = [
    "blocks",
    "derive",
    "sysml",
] }
protoflow-blocks = { version = "=0.4.3", default-features = false, features = [
    "hash",
] }
protoflow-core = { version = "=0.4.3", default-features = false }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "rustls-tls-native-roots",
] }
rdf-model = { version = "0.2.2", default-features = false }
rust-embed = { version = "8.7", default-features = false, features = [
    "deterministic-timestamps",
] }
secrecy = { version = "0.10", default-features = false }
serde = { version = "1", default-features = false, features = [
    "alloc",
    "derive",
] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
serde_yaml_ng = { version = "0.10.0", default-features = false }
sha2 = { version = "0.10", default-features = false }
slab = { version = "0.4.10", default-features = false }
stability = { version = "0.2", default-features = false }
tar = { version = "0.4", default-features = false }
tempfile = { version = "3.20", default-features = false }
thiserror = { version = "2", default-features = false }
tldr = { version = "0.1", package = "tldr-traits", default-features = false }
tokio = { version = "1", default-features = false, features = [
    "io-util",
    "rt",
] }
tokio-stream = { version = "0.1", default-features = false }
tokio-util = { version = "0.7", default-features = false }
tower-http = { version = "0.6", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "alloc",
    "tracing-log",
] }
url = { version = "2.5", default-features = false }
uuid = { version = "1.17", default-features = false, features = ["v4"] }
zip = { version = "4", default-features = false }

[patch.crates-io]
asimov-account = { path = "lib/asimov-account" }
asimov-agent = { path = "lib/asimov-agent" }
asimov-cache = { path = "lib/asimov-cache" }
asimov-config = { path = "lib/asimov-config" }
asimov-construct = { path = "lib/asimov-construct" }
asimov-core = { path = "lib/asimov-core" }
asimov-dataset = { path = "lib/asimov-dataset" }
asimov-directory = { path = "lib/asimov-directory" }
asimov-env = { path = "lib/asimov-env" }
asimov-flow = { path = "lib/asimov-flow" }
asimov-graph = { path = "lib/asimov-graph" }
asimov-installer = { path = "lib/asimov-installer" }
asimov-ledger = { path = "lib/asimov-ledger" }
asimov-module = { path = "lib/asimov-module" }
asimov-ontology = { path = "lib/asimov-ontology" }
asimov-patterns = { path = "lib/asimov-patterns" }
asimov-platform = { path = "lib/asimov-platform" }
asimov-prompt = { path = "lib/asimov-prompt" }
asimov-protocol = { path = "lib/asimov-protocol" }
asimov-proxy = { path = "lib/asimov-proxy" }
asimov-registry = { path = "lib/asimov-registry" }
asimov-repository = { path = "lib/asimov-repository" }
asimov-runner = { path = "lib/asimov-runner" }
asimov-runtime = { path = "lib/asimov-runtime" }
asimov-sdk = { path = "lib/asimov-sdk" }
asimov-server = { path = "lib/asimov-server" }
asimov-snapshot = { path = "lib/asimov-snapshot" }
asimov-sys = { path = "lib/asimov-sys" }
asimov-token = { path = "lib/asimov-token" }
asimov-universe = { path = "lib/asimov-universe" }
asimov-vault = { path = "lib/asimov-vault" }
#protoflow = { path = "../../vnd/protoflow/lib/protoflow" }
#protoflow-blocks = { path = "../../vnd/protoflow/lib/protoflow-blocks" }
#protoflow-core = { path = "../../vnd/protoflow/lib/protoflow-core" }
#protoflow-derive = { path = "../../vnd/protoflow/lib/protoflow-derive" }
