# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["lib/*"]
#default-members = []
resolver = "2"

[workspace.package]
version = "25.0.3"
authors = ["ASIMOV Systems <support@asimov.systems>"]
edition = "2024"
#rust-version = "1.85"
description = "ASIMOV Software Development Kit (SDK) for Rust"
#documentation = "https://docs.rs/asimov-sdk"
readme = true
homepage = "https://sdk.asimov.sh"
repository = "https://github.com/asimov-platform/asimov.rs"
license = "Unlicense"
keywords = ["asimov", "ai", "sdk"]
categories = []
publish = true

[workspace.dependencies]
asimov-account = { version = "25.0.3", default-features = false }
asimov-agent = { version = "25.0.3", default-features = false }
asimov-cache = { version = "25.0.3", default-features = false }
asimov-cloud = { version = "25.0.3", default-features = false }
asimov-config = { version = "25.0.3", default-features = false }
asimov-construct = { version = "25.0.3", default-features = false }
asimov-core = { version = "25.0.3", default-features = false }
asimov-credit = { version = "25.0.3", default-features = false }
asimov-dataset = { version = "25.0.3", default-features = false }
asimov-directory = { version = "25.0.3", default-features = false }
asimov-env = { version = "25.0.3", default-features = false }
asimov-flow = { version = "25.0.3", default-features = false }
asimov-graph = { version = "25.0.3", default-features = false }
asimov-huggingface = { version = "25.0.3", default-features = false }
asimov-id = { version = "25.0.3", default-features = false }
asimov-installer = { version = "25.0.3", default-features = false }
asimov-kb = { version = "25.0.3", default-features = false }
asimov-ledger = { version = "25.0.3", default-features = false }
asimov-module = { version =  "25.0.3", default-features = false }
asimov-nexus = { version = "25.0.3", default-features = false }
asimov-ontology = { version = "25.0.3", default-features = false }
asimov-patterns = { version = "25.0.3", default-features = false }
asimov-platform = { version = "25.0.3", default-features = false }
asimov-prompt = { version = "25.0.3", default-features = false }
asimov-protocol = { version = "25.0.3", default-features = false }
asimov-proxy = { version = "25.0.3", default-features = false }
asimov-registry = { version = "25.0.3", default-features = false }
asimov-repository = { version = "25.0.3", default-features = false }
asimov-runner = { version = "25.0.3", default-features = false }
asimov-runtime = { version = "25.0.3", default-features = false }
asimov-sdk = { version = "25.0.3", default-features = false }
asimov-server = { version = "25.0.3", default-features = false }
asimov-snapshot = { version = "25.0.3", default-features = false }
asimov-token = { version = "25.0.3", default-features = false }
asimov-universe = { version = "25.0.3", default-features = false }
asimov-vault = { version = "25.0.3", default-features = false }

alloy = { version = "0.5", default-features = false }
async-flow = { version = "0.1.5", default-features = false }
async-stream = { version = "0.3", default-features = false }
async-trait = { version = "0.1", default-features = false }
axum = { version = "0.8", default-features = false, features = ["macros"] }
axum-embed = { version = "0.1", default-features = false }
axum-prometheus = { version = "0.8", default-features = false, features = [
    "prometheus",
] }
axum-test = { version = "17.3", default-features = false }
bon = { version = "3.6", default-features = false }
bs58 = { version = "0.5", default-features = false }
bytes = { version = "1.10", default-features = false }
cap-directories = { version = "3.4", default-features = false }
cap-std = { version = "3.4", default-features = false, features = ["fs_utf8"] }
cfg_aliases = { version = "0.2", default-features = false }
clientele = { version = "0.3.8", default-features = false, features = [
    "argfile",
    "dotenv",
    "wild",
] }
derive_more = { version = "2", default-features = false }
dogma = { version = "0.1.10", default-features = false, features = ["traits"] }
eloquent = { version = "2.1", default-features = false }
flate2 = { version = "1", default-features = false }
flows = { version = "0.0.6", default-features = false }
futures = { version = "0.3", default-features = false }
getenv = { version = "0.1.2", default-features = false, features = [
    "cargo",
    "posix",
    "python",
    "ruby",
    "windows",
] }
gofer = { version = "0.1.8", default-features = false, features = [
    "all",
    "miette",
] }
hex = { version = "0.4", default-features = false }
hf-hub = { version = "0.4.2", default-features = false, features = ["ureq"] }
http = { version = "1.3", default-features = false }
http-body-util = { version = "0.1", default-features = false }
indicatif = "0.17.11"
jiff = { version = "0.2", default-features = false }
know = { version = "0", default-features = true }
lazy_static = { version = "1.5", default-features = false }
libloading = { version = "0.8", default-features = false }
local-ip-address = { version = "0.6", default-features = false }
mdns-sd = { version = "0.13", default-features = false }
miette = { version = "7.6", default-features = false, features = ["derive"] }
num-derive = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }
openai = { package = "known-types-openai", version = "0.0.8", default-features = false, features = [
    "alloc",
] }
rmcp = { version = "0.1.5", default-features = false }
#rmcp = { version = "0.2.1", default-features = false } # FIXME
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "rustls-tls-native-roots",
] }
rdf-model = { version = "0.2.2", default-features = false }
rust-embed = { version = "8.7", default-features = false, features = [
    "deterministic-timestamps",
] }
secrecy = { version = "0.10", default-features = false }
serde = { version = "1", default-features = false, features = [
    "alloc",
    "derive",
] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
serde_yaml_ng = { version = "0.10.0", default-features = false }
sha2 = { version = "0.10", default-features = false }
slab = { version = "0.4.10", default-features = false }
stability = { version = "0.2", default-features = false }
tar = { version = "0.4", default-features = false }
tempfile = { version = "3.20", default-features = false }
thiserror = { version = "2", default-features = false }
tldr = { version = "0.1", package = "tldr-traits", default-features = false }
tokio = { version = "1", default-features = false }
tokio-stream = { version = "0.1", default-features = false }
tokio-util = { version = "0.7", default-features = false }
tower-http = { version = "0.6", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "alloc",
    "tracing-log",
] }
turso = { version = "0.4", default-features = false }
url = { version = "2.5", default-features = false }
uuid = { version = "1.17", default-features = false, features = ["v4"] }
zip = { version = "4", default-features = false }

[patch.crates-io]
asimov-account = { path = "lib/asimov-account" }
asimov-agent = { path = "lib/asimov-agent" }
asimov-cache = { path = "lib/asimov-cache" }
asimov-cloud = { path = "lib/asimov-cloud" }
asimov-config = { path = "lib/asimov-config" }
asimov-construct = { path = "lib/asimov-construct" }
asimov-core = { path = "lib/asimov-core" }
asimov-credit = { path = "lib/asimov-credit" }
asimov-dataset = { path = "lib/asimov-dataset" }
asimov-directory = { path = "lib/asimov-directory" }
asimov-env = { path = "lib/asimov-env" }
asimov-flow = { path = "lib/asimov-flow" }
asimov-graph = { path = "lib/asimov-graph" }
asimov-huggingface = { path = "lib/asimov-huggingface" }
asimov-id = { path = "lib/asimov-id" }
asimov-installer = { path = "lib/asimov-installer" }
asimov-kb = { path = "lib/asimov-kb" }
asimov-ledger = { path = "lib/asimov-ledger" }
asimov-module = { path = "lib/asimov-module" }
asimov-nexus = { path = "lib/asimov-nexus" }
asimov-ontology = { path = "lib/asimov-ontology" }
asimov-patterns = { path = "lib/asimov-patterns" }
asimov-platform = { path = "lib/asimov-platform" }
asimov-prompt = { path = "lib/asimov-prompt" }
asimov-protocol = { path = "lib/asimov-protocol" }
asimov-proxy = { path = "lib/asimov-proxy" }
asimov-registry = { path = "lib/asimov-registry" }
asimov-repository = { path = "lib/asimov-repository" }
asimov-runner = { path = "lib/asimov-runner" }
asimov-runtime = { path = "lib/asimov-runtime" }
asimov-sdk = { path = "lib/asimov-sdk" }
asimov-server = { path = "lib/asimov-server" }
asimov-snapshot = { path = "lib/asimov-snapshot" }
asimov-token = { path = "lib/asimov-token" }
asimov-universe = { path = "lib/asimov-universe" }
asimov-vault = { path = "lib/asimov-vault" }
