[package]
name = "asimov-cloud"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = ["tracing"]
std = ["dogma/std"]
tracing = []
unstable = []

[dependencies]
asimov-credit.workspace = true
asimov-id.workspace = true
asimov-kb.workspace = true
asimov-nexus.workspace = true
dogma.workspace = true
