# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "asimov-cloud"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = ["tracing"]
std = [
    "asimov-credit/std",
    "asimov-id/std",
    "asimov-kb/std",
    "asimov-nexus/std",
    "dogma/std",
]
tracing = []
unstable = []

# Integrations:
clap = ["asimov-credit/clap", "asimov-id/clap", "asimov-kb/clap"]
eloquent = ["asimov-credit/eloquent", "asimov-id/eloquent", "asimov-kb/eloquent"]
libsql = ["asimov-credit/libsql", "asimov-id/libsql", "asimov-kb/libsql"]
rocket = ["asimov-id/rocket", "asimov-kb/rocket"]
serde = ["asimov-credit/serde", "asimov-id/serde", "asimov-kb/serde"]
turso = ["asimov-credit/turso", "asimov-id/turso", "asimov-kb/turso"]
validator = ["asimov-nexus/validator"]

[dependencies]
asimov-credit.workspace = true
asimov-id.workspace = true
asimov-kb.workspace = true
asimov-nexus.workspace = true
derive_more = { version = "2", features = ["display"] }
dogma.workspace = true
thiserror.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
reqwest = { workspace = true }
tokio = { workspace = true, features = ["io-util", "rt"] }

[target.'cfg(target_family = "wasm")'.dependencies]
reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true, features = ["rt"] }
tokio_with_wasm = { version = "0.8", features = ["rt"] }
