[package]
name = "asimov-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories = ["api-bindings", "data-structures", "text-processing"]
publish.workspace = true

[features]
default = ["all", "serde", "std"]
all = ["tracing"]
serde = ["protoflow-core/serde", "dep:serde"]
std = [
    "asimov-sys/std",
    "dogma/std",
    "protoflow-core/std",
    "tracing?/std",
    "dep:cap-directories",
    "dep:cap-std",
]
tracing = ["dep:tracing", "protoflow-core/tracing"]
unstable = []

[dependencies]
asimov-sys.workspace = true
cap-directories = { version = "3.2", default-features = false, optional = true }
cap-std = { version = "3.2", default-features = false, features = [
    "fs_utf8",
], optional = true }
dogma.workspace = true
know.workspace = true
protoflow-core.workspace = true
serde = { version = "1.0", default-features = false, optional = true }
stability.workspace = true
tracing = { version = "0.1", default-features = false, optional = true }
