[package]
name = "asimov-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories = ["api-bindings", "data-structures", "text-processing"]
publish = false

[features]
default = ["all", "serde", "std"]
all = ["tracing"]
serde = ["protoflow-core/serde", "dep:serde"]
std = [
    "asimov-sys/std",
    "dogma/std",
    "protoflow-core/std",
    "tracing?/std",
    "dep:cap-directories",
    "dep:cap-std",
]
tracing = ["dep:tracing", "protoflow-core/tracing"]
unstable = []

[dependencies]
asimov-sys.workspace = true
dogma.workspace = true
know.workspace = true
protoflow-core.workspace = true

# Optional dependencies:
cap-directories = { workspace = true, optional = true }
cap-std = { workspace = true, features = ["fs_utf8"], optional = true }
serde = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
