[package]
name = "asimov-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories = ["api-bindings", "data-structures", "text-processing"]
publish = false

[features]
default = ["all", "std"]
all = ["serde", "tracing"]
std = [
    "dogma/std",
    "know/std",
    "tracing?/std",
    "dep:cap-directories",
    "dep:cap-std",
]
unstable = []

# Integrations:
serde = ["dep:serde"]
tracing = ["dep:tracing"]

[dependencies]
dogma.workspace = true
know.workspace = true

# Optional dependencies:
cap-directories = { workspace = true, optional = true }
cap-std = { workspace = true, features = ["fs_utf8"], optional = true }

# Integrations:
serde = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
