# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "asimov-credit"
version.workspace = true
authors.workspace = true
edition.workspace = true
#rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[package.metadata.readme]
title = "ASIMOV.rs: Credit Types"

[features]
default = ["all", "std"]
all = ["tracing"]
std = ["asimov-core/std", "rust_decimal/std"]
tracing = []
unstable = []

# Integrations:
clap = ["dep:clap"]
eloquent = ["dep:eloquent"]
libsql = ["dep:libsql"]
serde = ["dep:serde"]
turso = ["dep:turso"]

[dependencies]
asimov-core.workspace = true
derive_more = { version = "2", features = ["add_assign", "display"] }
rust_decimal = { version = "1.40", default-features = false }
thiserror.workspace = true

# Integrations:
clap = { version = "4.5", default-features = false, features = ["derive", "std"], optional = true }
eloquent = { workspace = true, optional = true }
libsql = { version = "0.9", default-features = false, optional = true }
serde = { workspace = true, optional = true }
turso = { workspace = true, optional = true }
