# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "asimov-directory"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[package.metadata.readme]
title = "ASIMOV.rs: State Management"

[features]
default = ["all", "std"]
all = []
std = ["asimov-core/std", "dep:camino"]
unstable = []

# Features:
tracing = []

# Integrations:
camino = ["dep:camino"]

[dependencies]
asimov-core.workspace = true
derive_more = { workspace = true, features = ["display"] }

# Integrations:
camino = { workspace = true, optional = true }
