# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "asimov-directory"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[package.metadata.readme]
title = "ASIMOV.rs: State Management"

[features]
default = ["all", "std"]
all = ["fs"]
std = ["asimov-core/std"]
unstable = []

# Features:
fs = ["std", "dep:camino", "dep:tokio"]
tracing = []

# Integrations:
camino = ["dep:camino"]
tokio = ["dep:tokio"]

[dependencies]
asimov-config.workspace = true
asimov-core.workspace = true
asimov-module = { workspace = true, features = ["serde"] }
derive_more = { workspace = true, features = ["display"] }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }

# Integrations:
camino = { workspace = true, optional = true }
tokio = { workspace = true, features = ["fs"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
