[package]
name = "asimov-env"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories = ["api-bindings", "development-tools"]
publish.workspace = true

[features]
default = ["all", "std"]
all = ["tracing"]
std = ["dogma/std", "getenv/std", "dep:cap-directories", "dep:cap-std"]
tracing = []
unstable = []

[dependencies]
cap-directories = { version = "3.4", default-features = false, optional = true }
cap-std = { version = "3.4", default-features = false, features = [
    "fs_utf8",
], optional = true }
dogma.workspace = true
getenv = { version = "0.1", default-features = false, features = [
    "cargo",
    "posix",
    "python",
    "ruby",
] }
stability.workspace = true
