[package]
name = "asimov-env"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories = ["api-bindings", "development-tools"]
publish.workspace = true

[features]
default = ["all", "std"]
all = ["tracing"]
std = ["dogma/std", "getenv/std", "dep:cap-directories", "dep:cap-std"]
tracing = []
unstable = []

[dependencies]
dogma.workspace = true
getenv.workspace = true

# Optional dependencies:
cap-directories = { workspace = true, optional = true }
cap-std = { workspace = true, optional = true }
