# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "asimov-env"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories = ["api-bindings", "development-tools"]
publish.workspace = true

[package.metadata.readme]
title = "ASIMOV.rs: Environment Support"

[features]
default = ["all", "std"]
all = []
std = ["asimov-core/std", "getenv/std", "dep:cap-directories", "dep:cap-std"]
unstable = []

# Features:
tracing = []

[dependencies]
asimov-core.workspace = true
getenv.workspace = true

# Optional dependencies:
cap-directories = { workspace = true, optional = true }
cap-std = { workspace = true, optional = true }
