[package]
name = "asimov-flow"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories = ["concurrency", "network-programming", "no-std"]
publish.workspace = true

[features]
default = ["all", "std"]
all = ["derive", "serde", "tracing", "yaml"]
derive = ["protoflow/derive"]
serde = ["asimov-core/serde", "protoflow/serde", "dep:serde"]
std = ["asimov-core/std", "protoflow/std"]
tokio = ["protoflow/tokio"]
tracing = ["protoflow/tracing", "dep:tracing"]
unstable = ["asimov-core/unstable"]
yaml = ["serde", "dep:serde_yml"]

[dependencies]
asimov-core.workspace = true
protoflow.workspace = true
protoflow-blocks.workspace = true
serde = { version = "1.0", default-features = false, optional = true }
serde_yml = { version = "0.0.11", default-features = false, optional = true }
stability.workspace = true
tracing = { version = "0.1", default-features = false, optional = true }
