[package]
name = "asimov-flow"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories = ["concurrency", "network-programming", "no-std"]
publish = false

[features]
default = ["all", "std"]
all = ["derive", "serde", "tracing", "yaml"]
derive = ["protoflow/derive"]
serde = ["asimov-core/serde", "protoflow/serde", "dep:serde"]
std = ["asimov-core/std", "protoflow/std"]
tokio = ["protoflow/tokio"]
tracing = ["protoflow/tracing", "protoflow-blocks/tracing"]
unstable = ["asimov-core/unstable"]
yaml = ["serde", "dep:serde_yaml_ng"]

[dependencies]
asimov-core.workspace = true
protoflow.workspace = true
protoflow-blocks.workspace = true

# Optional dependencies:
serde = { workspace = true, optional = true }
serde_yaml_ng = { workspace = true, optional = true }
