[package]
name = "asimov-flow"
version.workspace = true
authors.workspace = true
edition.workspace = true
#rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories = ["concurrency", "network-programming", "no-std"]
publish = false

[features]
default = ["all", "std"]
all = []
std = ["tokio?/full"]
unstable = []

# Integrations:
tokio = ["dep:tokio"]

[dependencies]
asimov-core.workspace = true

# Integrations:
tokio = { workspace = true, optional = true }
