[package]
name = "asimov-huggingface"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories = []
publish.workspace = true

[features]
default = []
std = []
tracing = []
unstable = []

[dependencies]
hf-hub.workspace = true
indicatif.workspace = true
thiserror.workspace = true
