[package]
name = "asimov-id"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = ["tracing"]
std = ["dogma/std"]
tracing = []
unstable = []

# Integrations:
clap = ["dep:clap"]
eloquent = ["dep:eloquent"]
libsql = ["dep:libsql"]
rocket = ["dep:rocket"]
serde = ["dep:serde"]
turso = ["dep:turso"]

[dependencies]
derive_more = { version = "2", features = ["display"] }
dogma.workspace = true

# Integrations:
clap = { version = "4.5", default-features = false, features = ["derive", "std"], optional = true }
eloquent = { version = "2.0", default-features = false, optional = true }
libsql = { version = "0.9", default-features = false, optional = true }
rocket = { version = "0.5", default-features = false, optional = true }
serde = { workspace = true, optional = true }
turso = { version = "0.3", default-features = false, optional = true }
